--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.182",
     "@types/moment": "^2.13.0",
     "@types/moment-duration-format": "^2.2.3",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.20.6",
+    "lodash": "^4.17.21",
     "moment": "2.24.0",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^7.0.1",
