--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/moment-duration-format": "^2.2.3",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.20.6",
     "lodash": "^4.17.21",
@@ -20,6 +21,7 @@
     "moment-duration-format": "^2.3.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
